# pulse-sandbox-mocks

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  FIXTURES.md
pulse_sandbox/: __init__.py  cli.py  server.py
pulse_sandbox/hubspot/: fixtures.py  routes.py
pulse_sandbox/productive/: fixtures.py  jsonapi.py  routes.py
pulse_sandbox/profiles/: __init__.py  baseline.py  rich.py
pulse_sandbox/shims/: __init__.py  openai.py  resend.py  slack.py
scripts/: start.sh
tests/: conftest.py  test_hubspot_routes.py  test_jsonapi_helper.py  test_productive_routes.py  test_profiles.py  test_server.py  test_shims.py
